--- a/PhoneBook/nbproject/project.properties
+++ b/PhoneBook/nbproject/project.properties
@@ -28,13 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.bootstrap-maven-2.3.1.jar=C:\\Users\\1\\Desktop\\\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438\\bootstrap-maven-2.3.1.jar
 file.reference.bootstrap-maven-2.3.1.jar-1=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\bootstrap-maven-2.3.1.jar
-file.reference.jackson-all-1.9.9.jar=C:\\Users\\1\\Desktop\\\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438\\jackson-all-1.9.9.jar
 file.reference.jackson-all-1.9.9.jar-1=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\jackson-all-1.9.9.jar
-file.reference.mybatis-3.4.5.jar=C:\\Users\\1\\Desktop\\\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438\\mybatis-3.4.5.jar
+file.reference.jackson-core-asl-1.9.13.redhat-4.jar=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\jackson-core-asl-1.9.13.redhat-4.jar
+file.reference.jackson-databind-2.3.1.jar=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\jackson-databind-2.3.1.jar
+file.reference.jackson-mapper-asl-1.9.13.redhat-4.jar=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\jackson-mapper-asl-1.9.13.redhat-4.jar
+file.reference.jquery-3.2.1.jar=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\jquery-3.2.1.jar
+file.reference.json-20171018.jar=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\json-20171018.jar
 file.reference.mybatis-3.4.5.jar-1=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\mybatis-3.4.5.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\1\\Desktop\\\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0438\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\Desktop\\\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u043d\u044b\u043c\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u043c\u0438\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,12 +46,13 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bootstrap-maven-2.3.1.jar}:\
-    ${file.reference.jackson-all-1.9.9.jar}:\
-    ${file.reference.mybatis-3.4.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.bootstrap-maven-2.3.1.jar-1}:\
     ${file.reference.jackson-all-1.9.9.jar-1}:\
+    ${file.reference.jackson-core-asl-1.9.13.redhat-4.jar}:\
+    ${file.reference.jackson-databind-2.3.1.jar}:\
+    ${file.reference.jackson-mapper-asl-1.9.13.redhat-4.jar}:\
+    ${file.reference.jquery-3.2.1.jar}:\
+    ${file.reference.json-20171018.jar}:\
     ${file.reference.mybatis-3.4.5.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
